Integration test for searching across a beaocn